--- a/style.css
+++ b/style.css
@@ -54,7 +54,6 @@ header {
 
 .video-container .caption {
   z-index: 1;
-  position: relative;
   text-align: center;
   color: #dc0000;
   padding: 10px;
@@ -66,6 +65,7 @@ h1 {
   text-align: center;
   color: var(--primary-color);
   text-shadow: 0 0 10px black;
+  font-size: 4rem;
 }
 
 .search-container {
