--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 .container {
   display: grid;
   justify-content: center;
-  gap: 1rem;
+  gap: 2rem;
   padding: 2rem;
 }
 
@@ -134,10 +134,24 @@ h1 {
   padding: 0.5rem;
   border-radius: 10px;
   text-align: center;
+  cursor: pointer;
+  border: none;
 }
 
 .btn:hover {
   background-color: var(--primary-color-2) !important;
+}
+
+.prev-next-container {
+  display: grid;
+  justify-content: center;
+  grid-auto-flow: column;
+  gap: 1rem;
+}
+
+#error-message {
+  color: red;
+  justify-self: center;
 }
 
 /* Ripple effect */
